tests/ui/consts/offset_from_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:18:27
   |
LL |     let offset = unsafe { ptr_offset_from(field_ptr, base_ptr) };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from` called on pointers into different allocations

error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
   |
   = note: `ptr_offset_from` called on pointers into different allocations
   |
note: inside `ptr::const_ptr::<impl *const u8>::offset_from`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
note: inside `NOT_PTR`
  --> $DIR/offset_from_ub.rs:25:14
   |
LL |     unsafe { (42 as *const u8).offset_from(&5u8) as usize }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:32:14
   |
LL |     unsafe { ptr_offset_from(field_ptr, base_ptr as *const u16) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact_div: 1_isize cannot be divided by 2_isize without remainder

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:82:14
   |
LL |     unsafe { ptr_offset_from_unsigned(field_ptr, base_ptr) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from_unsigned` called on pointers into different allocations

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:89:14
   |
LL |     unsafe { ptr_offset_from(ptr2, ptr1) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from` called when first pointer is too far ahead of second

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:95:14
   |
LL |     unsafe { ptr_offset_from(ptr1, ptr2) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from` called when first pointer is too far before second

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:102:14
   |
LL |     unsafe { ptr_offset_from_unsigned(p, p.add(2) ) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from_unsigned` called when first pointer has smaller offset than second: 0 < 8

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_from_ub.rs:109:14
   |
LL |     unsafe { ptr_offset_from_unsigned(ptr2, ptr1) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ptr_offset_from_unsigned` called when first pointer is too far ahead of second

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0080`.
